--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Chinese-Hakka Dictionary</title>
+    <title>網購商城Q&A</title>
 </head>
 <body>
-    <h1>查詢Chinese-Hakka</h1>
+    <h1>查詢網購商城Q&A</h1>
     <input type="text" id="query" placeholder="Enter Chinese word">
     <button onclick="search()">Search</button>
     <p id="result"></p>
